# hakitool

./: .gitignore  README.md  download.py  pyproject.toml  requirements.txt  search_app.py  search_engine.py  summarize.py  test_search_engine.py
src/hakitool/: __init__.py  cli.py  deploy.py  download.py  flask_app.py  search_app.py  search_engine.py  util.py
src/hakitool/files/uberspace/etc/services.d/: template_PROJECT_NAME_uwsgi.ini
src/hakitool/files/uberspace/uwsgi/apps-enabled/: template_PROJECT_NAME.ini
static/: style.css
templates/: base.html  file_view.html  index.html  results.html
